# ComfyUI-AE-Animation

./: .gitignore  README.md  __init__.py  ae_animation_core.py  ae_render.py  demo.html  pyproject.toml  tmp_check.py  tmp_script.txt  布局参考.html
.github/workflows/: publish.yml
.kiro/specs/ae-3d-layers/: design.md  requirements.md  tasks.md
ComfyUI-AudioMass-master/: .gitignore  ComfyUIAudioMass.py  README.md  README_CN.md  __init__.py  package-lock.json  package.json  pyproject.toml  vite.config.mts
ComfyUI-AudioMass-master/audiomass-ui/: about.html  actions.js  engine.js  flac.js  index-vite.html  index.html  libflac.js  lz4-block-codec-wasm.js  main.js  manifest.json  recorder.js  rnn_denoise.js  sw.js  ui-fx.js  ui.js
ComfyUI-AudioMass-master/js/: main.js
ComfyUI-AudioMass-master/js/assets/: main.css
ComfyUI-AudioMass-master/locales/en/: main.json
ComfyUI-AudioMass-master/locales/zh/: main.json
ComfyUI-AudioMass-master/src/: App.vue  Root.vue  i18n.ts  main.ts
backup/js_legacy/: bezier_path_editor.js
frontend/: vite.config.ts
frontend/src/: TimelineApp.vue  timeline.css
frontend/src/components/timeline/: CanvasPreview.vue  KeyframeTimeline.vue  ProjectSettings.vue
frontend/src/composables/: useCanvasInteraction.ts  useCanvasRenderer.ts  useTransform3D.ts
frontend/src/composables/timeline/gpu/: GPUTimelineRenderer.ts
frontend/src/stores/: timelineStore.ts
js/: ae_timeline_ext.js  background_extractor.js  mask_editor.js  timeline.js
js/vue-dist/: mask-editor.js  timeline.js
js/vue-dist/assets/: _plugin-vue_export-helper.js  timeline.css
